JacksonCore_4/evosuite/original/evosuite-report-clz/test_build.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/JacksonCore_4_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/CI/Benchmark/libs/evosuite-shaded-1.2.1-SNAPSHOT.jar:target/classes/  /home/liumengjiao/Desktop/CI/Benchmark/../bugs/JacksonCore_4_buggy/evosuite-tests/com/fasterxml/jackson/core/util/TextBuffer_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Benchmark/../bugs/JacksonCore_4_buggy/evosuite-tests/com/fasterxml/jackson/core/util/TextBuffer_ESTest.java >> evosuite-report-clz/test_build.log 2>&1

/home/liumengjiao/Desktop/CI/Benchmark/../bugs/JacksonCore_4_buggy/evosuite-tests/com/fasterxml/jackson/core/util/TextBuffer_ESTest.java:11: error: cannot find symbol
import com.fasterxml.jackson.core.util.BufferRecycler;
                                      ^
  symbol:   class BufferRecycler
  location: package com.fasterxml.jackson.core.util
/home/liumengjiao/Desktop/CI/Benchmark/../bugs/JacksonCore_4_buggy/evosuite-tests/com/fasterxml/jackson/core/util/TextBuffer_ESTest.java:12: error: cannot find symbol
import com.fasterxml.jackson.core.util.TextBuffer;
                                      ^
  symbol:   class TextBuffer
  location: package com.fasterxml.jackson.core.util
/home/liumengjiao/Desktop/CI/Benchmark/../bugs/JacksonCore_4_buggy/evosuite-tests/com/fasterxml/jackson/core/util/TextBuffer_ESTest.java:22: error: cannot find symbol
      BufferRecycler bufferRecycler0 = new BufferRecycler();
      ^
  symbol:   class BufferRecycler
  location: class TextBuffer_ESTest
/home/liumengjiao/Desktop/CI/Benchmark/../bugs/JacksonCore_4_buggy/evosuite-tests/com/fasterxml/jackson/core/util/TextBuffer_ESTest.java:22: error: cannot find symbol
      BufferRecycler bufferRecycler0 = new BufferRecycler();
                                           ^
  symbol:   class BufferRecycler
  location: class TextBuffer_ESTest
/home/liumengjiao/Desktop/CI/Benchmark/../bugs/JacksonCore_4_buggy/evosuite-tests/com/fasterxml/jackson/core/util/TextBuffer_ESTest.java:23: error: cannot find symbol
      TextBuffer textBuffer0 = new TextBuffer(bufferRecycler0);
      ^
  symbol:   class TextBuffer
  location: class TextBuffer_ESTest
/home/liumengjiao/Desktop/CI/Benchmark/../bugs/JacksonCore_4_buggy/evosuite-tests/com/fasterxml/jackson/core/util/TextBuffer_ESTest.java:23: error: cannot find symbol
      TextBuffer textBuffer0 = new TextBuffer(bufferRecycler0);
                                   ^
  symbol:   class TextBuffer
  location: class TextBuffer_ESTest
/home/liumengjiao/Desktop/CI/Benchmark/../bugs/JacksonCore_4_buggy/evosuite-tests/com/fasterxml/jackson/core/util/TextBuffer_ESTest.java:39: error: cannot find symbol
      BufferRecycler bufferRecycler0 = new BufferRecycler();
      ^
  symbol:   class BufferRecycler
  location: class TextBuffer_ESTest
/home/liumengjiao/Desktop/CI/Benchmark/../bugs/JacksonCore_4_buggy/evosuite-tests/com/fasterxml/jackson/core/util/TextBuffer_ESTest.java:39: error: cannot find symbol
      BufferRecycler bufferRecycler0 = new BufferRecycler();
                                           ^
  symbol:   class BufferRecycler
  location: class TextBuffer_ESTest
/home/liumengjiao/Desktop/CI/Benchmark/../bugs/JacksonCore_4_buggy/evosuite-tests/com/fasterxml/jackson/core/util/TextBuffer_ESTest.java:40: error: cannot find symbol
      TextBuffer textBuffer0 = new TextBuffer(bufferRecycler0);
      ^
  symbol:   class TextBuffer
  location: class TextBuffer_ESTest
/home/liumengjiao/Desktop/CI/Benchmark/../bugs/JacksonCore_4_buggy/evosuite-tests/com/fasterxml/jackson/core/util/TextBuffer_ESTest.java:40: error: cannot find symbol
      TextBuffer textBuffer0 = new TextBuffer(bufferRecycler0);
                                   ^
  symbol:   class TextBuffer
  location: class TextBuffer_ESTest
10 errors
